--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
+# Фиксируем совместимую версию numpy (обязательно <2.0)
+numpy==1.26.4
+
+# Указываем версии OpenCV, совместимые с numpy 1.x
+opencv-python==4.10.0.84
+opencv-contrib-python==4.10.0.84
+opencv-python-headless==4.10.0.84
+
+# Остальные зависимости
 paddlepaddle==2.6.2
 paddleocr==2.7.0.3
 flask
 gunicorn
-numpy
 pillow
